[project]
name = "FletStream"
version = "1.7.0"
description = "Aplicación de streaming y descargas con Flet by Ing.YaeCk"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yosbel Alba Estrada", email = "khloealba932@gmail.com" }
]
dependencies = [
  "flet==0.82.2",
  "requests",
  "flet-toast",
  "beautifulsoup4",     # Necesario para BeautifulSoup (bs4)
  "urllib3",            # Necesario para el manejo de conexiones
  "flet-video",          # Necesario para el reproductor de video
  "pycryptodome",
  "bs4==0.0.2"
]

[tool.flet]
org = "yae.ppl"
product = "fletstream"
company = "PPL"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.82.2"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.82.2"}
